# marketing-workflow

./: .gitignore  Dockerfile  LLM_Market_Analysis_Report_Fine_tuning_Domain_Specific_LLMs.txt  MLFLOW_SETUP.md  README.md  blog.md  docker-compose.yml  pyproject.toml  report.md  seo_optimized_blog.md
knowledge/: user_preference.txt
mlflow_utils/: README.md  __init__.py  config.py  metrics_analyzer.py  metrics_dashboard.py  metrics_dashboard_report.json  mlflow_experiment_data.json  mlflow_monitor.py  start_server.py  test_setup.py  utils.py
resources/drafts/posts/: Email_Campaign.md  Instagram_Post.md  LinkedIn_Post.md  Twitter_Post.md
src/marketing/: crew.py  main.py
src/marketing/config/: agents.yaml  tasks.yaml
src/marketing/resources/blogs/: Unleashing_Productivity_AI_Powered_Excel_Automation_Tool.md
src/marketing/resources/drafts/: AI_Excel_Automation_Market_Research_2025.txt  AI_Excel_Automation_Tool_Market_Research_Report.txt  Market_Research_Report_AI_Excel_Automation_Tool.txt
src/marketing/resources/drafts/blogs/: AI_Powered_Excel_Automation_Tool_Blog_1.md  AI_Powered_Excel_Automation_Tool_Blog_2.md
src/marketing/resources/drafts/posts/: Email_Campaign.md  Instagram_Post.md  LinkedIn_Post.md  Twitter_Post.md
src/marketing/resources/optimized_reports/: SME_AI_Excel_Automation_Needs_Report.md
src/marketing/tools/: custom_tool.py
