[project]
name = "ai-ml-research-scientist-marketing"
version = "0.1.0"
description = "AI/ML Research Scientist LinkedIn Marketing and Research Publication System using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
    "mlflow>=2.8.0,<3.0.0"
]

[project.scripts]
ai-ml-research-marketing = "marketing.main:run"
run_crew = "marketing.main:run"
train = "marketing.main:train"
replay = "marketing.main:replay"
test = "marketing.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marketing"]

[tool.crewai]
type = "crew"
